--- a/src/main/resources/templates/users/deletedUser.html
+++ b/src/main/resources/templates/users/deletedUser.html
@@ -4,22 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SFU Malware</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
     <div class="container-fluid">
 		<div class="row justify-content-center">
 			<div class="col-md-4">
-				<h1 class="text-center mt-5 mb-4">Proof SFU Wants to Spy on You</h1>
-                <form action="/add.html" class="d-grid gap-2 mb-3">
-                    <input class="btn btn-danger" type="submit" value="Add victim"></input>
+                <h1 class="text-center mt-5 mb-4">User deleted</h1>
+                <form action="/users/view" class="d-grid gap-2">
+                    <input class="btn btn-danger" type="submit" value="View users"></input>
                 </form>
-                <form action="/users/view" class="d-grid gap-2 mb-3">
-                    <input class="btn btn-secondary" type="submit" value="View victims"></input>
-                </form>
-			</div>
-		</div>
-	</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
