--- a/src/main/resources/templates/users/editUser.html
+++ b/src/main/resources/templates/users/editUser.html
@@ -4,51 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add User</title>
+    <title>Edit User</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
     <div class="container-fluid">
-		<div class="row justify-content-left"></div>
-			<div class="col-md-1">
-				<div class="d-grid gap-2 mt-3">
-					<form action="/mainpage.html">
-						<input class="btn btn-secondary" type="submit" value="BACK"></input>
-					</form>
-				</div>
-			</div>
-		</div>
 		<div class="row justify-content-center">
 			<div class="col-md-4">
-				<h1 class="text-center mt-5 mb-4">New User</h1>
-				<form action="/users/add" method="post">
+				<h1 class="text-center mt-5 mb-4">Edit User</h1>
+				<form th:action="@{/users/edit/{uid}(uid=${user.uid})}" method="post">
                     
 					<div class="mb-3">
 						
 						<input type="text" id="name" name="name" class="form-control form-control-lg" 
-                            placeholder="Name" required>
+                            placeholder="Name" th:value="${user.name}" required>
 					</div>
 					<div class="mb-3">
 						
 						<input type="number" id="height" name="height" class="form-control form-control-lg" 
-                            placeholder="Height (cm)" min="0" max="300" required>
+                            placeholder="Height" min="0" max="300" th:value="${user.height}" required>
 					</div>
 					<div class="mb-3">
 						<input type="number" id="weight" name="weight" class="form-control form-control-lg" 
-                            placeholder="Weight (kg)" min="1" max="500" required>
+                            placeholder="Weight" min="1" max="500" th:value="${user.weight}" required>
 					</div>
                     <div class="mb-3">
 						<input type="color" id="color" name="color" class="form-control form-control-lg" 
-                            placeholder="Color" required>
+                            placeholder="Color" th:value="${user.color}" required>
 					</div>
 					<div class="mb-3">
 						<input type="number" id="gpa" name="gpa" class="form-control form-control-lg" 
-                            placeholder="GPA" step="0.01" min="0" max="4.33" required>
+                            placeholder="GPA" step="0.01" min="0" max="4.33" th:value="${user.gpa}" required>
 					</div>
 					<!-- Submit button -->
                     
                     <div class="d-grid gap-2">
-                        <input class="btn btn-danger" type="submit" value="SEND"></input>
+                        <input class="btn btn-primary" type="submit" value="SEND"></input>
                     </div>
 
                     
