--- a/src/main/resources/templates/users/deletedAll.html
+++ b/src/main/resources/templates/users/deletedAll.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Malware Initialized</title>
+    <title>SFU defunct</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
     <div class="container-fluid">
 		<div class="row justify-content-center">
 			<div class="col-md-4">
-                <h1 class="text-center mt-5 mb-4">User added</h1>
-                <form action="/../mainpage.html" class="d-grid gap-2">
-                    <input class="btn btn-danger" type="submit" value="Home page"></input>
+                <h1 class="text-center mt-5 mb-4">Deleted all users</h1>
+                <form action="/users/view" class="d-grid gap-2">
+                    <input class="btn btn-danger" type="submit" value="View users"></input>
                 </form>
             </div>
         </div>
